--- a/libs/ui/src/lib/ui/ui.html
+++ b/libs/ui/src/lib/ui/ui.html
@@ -1,1 +1,22 @@
-<p>Ui works!</p>
+<!-- <tui-root> -->
+    <!-- content of your app -->
+    <lib-ui-button></lib-ui-button>
+    <!--
+       If you need, you can add something between Taiga portal layers:
+      -->
+    <ng-container ngProjectAs="tuiOverContent">
+      <!-- Content over app content -->
+    </ng-container>
+    <ng-container ngProjectAs="tuiOverDialogs">
+      <!-- Content over dialogs -->
+    </ng-container>
+    <ng-container ngProjectAs="tuiOverAlerts">
+      <!-- Content over alerts -->
+    </ng-container>
+    <ng-container ngProjectAs="tuiOverDropdowns">
+      <!-- Content over dropdowns -->
+    </ng-container>
+    <ng-container ngProjectAs="tuiOverHints">
+      <!-- Content over hints -->
+    </ng-container>
+<!-- </tui-root> -->
