added example .less file for taiga imports in ui lib

--- a/libs/ui/src/lib/ui/ui.html
+++ b/libs/ui/src/lib/ui/ui.html
@@ -1,5 +1,7 @@
-<!-- <tui-root> -->
+<tui-root>
     <!-- content of your app -->
+    <h1 class="tui-text_h1">This is a heading</h1>
+    <h1 class="tui-text_h2">This is a heading</h1>
     <lib-ui-button></lib-ui-button>
     <!--
        If you need, you can add something between Taiga portal layers:
@@ -19,4 +21,4 @@
     <ng-container ngProjectAs="tuiOverHints">
       <!-- Content over hints -->
     </ng-container>
-<!-- </tui-root> -->
+</tui-root>
