added an accordion component to ui lib

--- a/libs/ui/src/lib/ui/ui.html
+++ b/libs/ui/src/lib/ui/ui.html
@@ -1,8 +1,9 @@
 <tui-root>
     <!-- content of your app -->
     <h1 class="tui-text_h1">This is a heading</h1>
-    <h1 class="tui-text_h2">This is a heading</h1>
+    <h2 class="tui-text_h2">This is a heading</h2>
     <lib-ui-button></lib-ui-button>
+    <lib-ui-accordion></lib-ui-accordion>
     <!--
        If you need, you can add something between Taiga portal layers:
       -->
