--- a/libs/ui/src/lib/button/button.html
+++ b/libs/ui/src/lib/button/button.html
@@ -1,1 +1,5 @@
-<button tuiButton>click me</button>
+<button tuiButton 
+    [size]="size" 
+    [disabled]="disabled"
+    [appearance]="appearance"
+>{{ text }}</button>
