--- a/libs/ui/src/lib/ui/ui.html
+++ b/libs/ui/src/lib/ui/ui.html
@@ -2,7 +2,9 @@
     <!-- content of your app -->
     <h1 class="tui-text_h1">This is a heading</h1>
     <h2 class="tui-text_h2">This is a heading</h2>
-    <lib-ui-button></lib-ui-button>
+    <lib-ui-button size='s' appearance="info">small (ng-content)</lib-ui-button>
+    <lib-ui-button size='m' text="medium" appearance="secondary"></lib-ui-button>
+    <lib-ui-button size='l' text="large" appearance="warning"></lib-ui-button>
     <lib-ui-accordion></lib-ui-accordion>
     <!--
        If you need, you can add something between Taiga portal layers:
