--- a/libs/ui/src/lib/ui/ui.html
+++ b/libs/ui/src/lib/ui/ui.html
@@ -6,6 +6,7 @@
     <lib-ui-button size='m' text="medium" appearance="secondary"></lib-ui-button>
     <lib-ui-button size='l' text="large" appearance="warning"></lib-ui-button>
     <lib-ui-accordion></lib-ui-accordion>
+    <lib-ui-actionbar></lib-ui-actionbar>
     <!--
        If you need, you can add something between Taiga portal layers:
       -->
