--- a/libs/ui/src/lib/ui/ui.html
+++ b/libs/ui/src/lib/ui/ui.html
@@ -6,7 +6,10 @@
     <lib-ui-button size='m' text="medium" appearance="secondary"></lib-ui-button>
     <lib-ui-button size='l' text="large" appearance="warning"></lib-ui-button>
     <lib-ui-accordion></lib-ui-accordion>
-    <lib-ui-actionbar></lib-ui-actionbar>
+
+    <lib-ui-button (click)="toggleBar()">Open Action Bar</lib-ui-button>
+
+    <lib-ui-actionbar [open]="open" (closeBar)="toggleBar()" (doAction)="doAction()"><div>when passing <b>ng-content</b> I foudn that it's better for appearance to use a <code>div</code> element.</div></lib-ui-actionbar>
     <!--
        If you need, you can add something between Taiga portal layers:
       -->
