added example directive

--- a/libs/ui/src/lib/actionbar/actionbar.html
+++ b/libs/ui/src/lib/actionbar/actionbar.html
@@ -7,7 +7,7 @@
 
     <button
         appearance="glass"
-        [iconStart]="actionIcon"
+        iconStart="@tui.trash"
         tuiButton
         type="button"
         (click)="onAction()"
