--- a/libs/ui/src/lib/ui/ui.html
+++ b/libs/ui/src/lib/ui/ui.html
@@ -10,6 +10,7 @@
     <lib-ui-button (click)="toggleBar()">Open Action Bar</lib-ui-button>
     <lib-ui-actionbar [open]="open" (closeBar)="toggleBar()" (doAction)="doAction()"><div>when passing <b>ng-content</b> I found that it's better for appearance to use a <code>div</code> element.</div></lib-ui-actionbar>
 
+    <lib-ui-table></lib-ui-table>
     
     <!--
        If you need, you can add something between Taiga portal layers:
