--- a/libs/ui/src/lib/table/table.html
+++ b/libs/ui/src/lib/table/table.html
@@ -1,35 +1,21 @@
 <table
-    tuiTable
-    class="table"
-    [columns]="columns"
+  tuiTable
+  class="table"
+  [columns]="columns"
 >
-    <thead>
-        <tr tuiThGroup>
-            <th
-                tuiTh
-                [maxWidth]="500"
-                [minWidth]="200"
-                [resizable]="true"
-            >
-                Name
-            </th>
-            <th tuiTh>Balance</th>
+  <thead>
+    <tr>
+      <th tuiTh [maxWidth]="500" [minWidth]="200" [resizable]="true">Name</th>
+      <th tuiTh>Balance</th>
+    </tr>
+  </thead>
+
+  <tbody tuiTbody [data]="data">
+    @for (item of data; track item) {
+        <tr tuiTr>
+          <td tuiTd *tuiCell="'name'">{{ item.name }}</td>
+          <td tuiTd *tuiCell="'balance'">{{ item.balance | tuiFormatNumber | async }}</td>
         </tr>
-    </thead>
-    <tbody
-        tuiTbody
-        [data]="data"
-    >
-        <tr
-            *ngFor="let item of data"
-            tuiTr
-        >
-            <td
-                *tuiCell="'balance'"
-                tuiTd
-            >
-                {{ item.balance | tuiFormatNumber | async }}
-            </td>
-        </tr>
-    </tbody>
+    }
+  </tbody>
 </table>
